--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/genai": "^1.29.0",
     "@prisma/client": "^6.19.0",
     "bcrypt": "^6.0.0",
+    "dotenv-cli": "^11.0.0",
     "marked": "13.0.2",
     "pg": "^8.16.3",
     "prisma": "^6.19.0",
